# RealEstate-auction-analysis-agent

./: .env.example  .gitignore  Makefile  README.md  config.yml  endpoints.yml  pyproject.toml  requirements.txt
actions/: __init__.py  actions.py
auction_agent/: __init__.py  cli.py  data.py  engine.py  memory.py  official_data.py  prepared_data.py  report.py  web.py  widgets.py
data/: DATA.md  auction_properties.json  auction_terms.json  code_enforcement.json  court_records.json  official_records.json  property_appraiser.json  scenario_key.json  tax_collector.json
data/flows/: auction_analysis.yml
domain/: auction_analysis.yml
scripts/: check_nebius.py
tests/: test_analysis.py  test_official_data.py  test_prepared_data.py  test_rasa_action.py  test_web_chat.py
web/: app.js  index.html  styles.css
