[project]
name = "auction-analysis-agent"
version = "0.1.0"
description = "Auction due diligence analysis engine for a voice AI app."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
